# ic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/imgui_extensions/: ImguiDirectoryTreeView.cpp  ImguiDirectoryTreeView.h
src/: image_classifier.h  main.cpp  texture.h
